; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/init/extr_init.c_del_session.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/init/extr_init.c_del_session.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i64 (%struct.TYPE_9__*, %struct.TYPE_8__*, i32)* }
%struct.TYPE_8__ = type { i32, i32* }
%struct.TYPE_7__ = type { i32 }

@session_db = common dso_local global %struct.TYPE_9__* null, align 8
@.str = private unnamed_addr constant [14 x i8] c"delete %d: %s\00", align 1
@errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*)* @del_session to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @del_session(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca %struct.TYPE_8__, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %2, align 8
  %4 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 1
  store i32* %5, i32** %6, align 8
  %7 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %3, i32 0, i32 0
  store i32 4, i32* %7, align 8
  %8 = load %struct.TYPE_9__*, %struct.TYPE_9__** @session_db, align 8
  %9 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %8, i32 0, i32 0
  %10 = load i64 (%struct.TYPE_9__*, %struct.TYPE_8__*, i32)*, i64 (%struct.TYPE_9__*, %struct.TYPE_8__*, i32)** %9, align 8
  %11 = load %struct.TYPE_9__*, %struct.TYPE_9__** @session_db, align 8
  %12 = call i64 %10(%struct.TYPE_9__* %11, %struct.TYPE_8__* %3, i32 0)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %21

14:                                               ; preds = %1
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @errno, align 4
  %19 = call i32 @strerror(i32 %18)
  %20 = call i32 @emergency(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0), i32 %17, i32 %19)
  br label %21

21:                                               ; preds = %14, %1
  ret void
}

declare dso_local i32 @emergency(i8*, i32, i32) #1

declare dso_local i32 @strerror(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
